--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "react-facebook-pixel": "^1.0.4",
     "react-ga": "^3.3.0",
     "react-gtm-module": "^2.0.11",
+    "react-helmet": "^6.1.0",
+    "react-player": "^2.9.0",
     "react-quill": "^1.3.5",
     "react-router-dom": "^5.2.0",
     "react-router-hash-link": "^2.2.2",
