--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "isomorphic-fetch": "^3.0.0",
     "jquery": "^3.5.1",
     "react": "^17.0.0",
+    "react-calendar": "^3.4.0",
     "react-dom": "^17.0.0",
     "react-facebook-pixel": "^1.0.4",
     "react-ga": "^3.3.0",
