--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "gh-pages": "^3.1.0",
     "isomorphic-fetch": "^3.0.0",
     "jquery": "^3.5.1",
+    "quill": "^1.3.7",
     "react": "^17.0.0",
     "react-calendar": "^3.4.0",
     "react-dom": "^17.0.0",
@@ -25,7 +26,8 @@
     "react-router-sitemap": "^1.2.0",
     "react-scripts": "^3.4.4",
     "stripe": "^8.119.0",
-    "universal-cookie": "^4.0.4"
+    "universal-cookie": "^4.0.4",
+    "uuid": "^3.4.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.12.10",
