--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "@stripe/stripe-js": "^1.11.0",
     "animate.css": "^4.1.1",
     "animate.css-react": "^1.1.0",
+    "axios": "^0.24.0",
     "file-saver": "^2.0.5",
     "gh-pages": "^3.1.0",
     "isomorphic-fetch": "^3.0.0",
     "jquery": "^3.5.1",
+    "js-file-download": "^0.4.12",
     "quill": "^1.3.7",
     "react": "^17.0.0",
     "react-calendar": "^3.4.0",
